# yggdrasil-apirs

./: .gitignore  Cargo.toml  LICENSE  readme.md  yddgrasil.yml  yggdrasil.yml
migration/src/: lib.rs  m20240708_142859_create_user_table.rs  m20240708_155447_create_profile_table.rs  m20240709_091713_create_texture_table.rs  m20240805_064539_add_username.rs
src/: main.rs
src/config/: auth.rs  core.rs  meta.rs  mod.rs  texture.rs
src/controller/: mod.rs
src/controller/api/: create.rs  mod.rs  texture.rs
src/controller/auth_server/: authenticate.rs  invalidate.rs  mod.rs  refresh.rs  signout.rs  validate.rs
src/controller/authserver/: authenticate.rs  mod.rs  refresh.rs  signout.rs
src/controller/session_server/: join.rs  mod.rs  profile.rs
src/controller/user/: create.rs  mod.rs
src/model/: mod.rs
src/model/serialized/: mod.rs  profile.rs  properties.rs  user.rs  uuid.rs
src/service/: crypto.rs  file.rs  mod.rs  password.rs  session.rs  texture.rs  token.rs
