[package]
name = "yggdrasil-apirs"
description = ""
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
#tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"

#web
axum = { version = "0.7.5", features = ["multipart"] }
tower-http = { version = "0.5.2", features = ["catch-panic", "trace", "cors", "sensitive-headers"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }

#serde
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde-inline-default = "0.2.0"
toml = "0.8.14"

#database
migration = {path = "migration"}
sea-orm = { version = "0.12.15", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"] }
moka = { version = "0.12.8", features = ["future"] }

#algorithm
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
base64 = "0.22.1"
uuid = { version =  "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
rsa = "0.6.1"
sha1 = "0.10.6"

#tools
lazy_static = "1.5.0"
tokio = "1.38.0"
futures = "0.3.30"
rand = "0.8.5"
chrono = "0.4.38"
log = "0.4.22"


[build-dependencies]
shadow-rs = "0.29.0"
